--- a/logsense-daemonset-rbac.yaml
+++ b/logsense-daemonset-rbac.yaml
@@ -26,7 +26,7 @@ spec:
         effect: NoSchedule
       containers:
       - name: fluentd-logsense
-        image: logsenseapp/fluentd-kubernetes-daemonset:latest
+        image: logsenseapp/fluentd-kubernetes-daemonset:v1.3
         env:
         - name: LOGSENSE_TOKEN
           valueFrom:
