Hardcoding values for now

--- a/logsense.conf
+++ b/logsense.conf
@@ -17,7 +17,7 @@
   transport tls
   tls_verify_hostname true
   <server>
-    host #{ENV['LOGSENSE_HOST']}
-    port #{ENV['LOGSENSE_PORT']}
+    host logs.logsense.com
+    port 32714
   </server>
 </match>
