Just to see if this is really what I think it is

--- a/logsense.conf
+++ b/logsense.conf
@@ -5,7 +5,7 @@
 <filter **>
   @type record_transformer
   <record>
-    logsense_token #{ENV['LOGSENSE_TOKEN']}
+    logsense_token "#{ENV['LOGSENSE_TOKEN']}"
   </record>
 </filter>
 
