Fix typos in fluentd config
Ruby interpolation requires double quoted strings.

--- a/logsense.conf
+++ b/logsense.conf
@@ -17,7 +17,7 @@
   transport tls
   tls_verify_hostname true
   <server>
-    host logs.logsense.com
-    port 32714
+    host "#{ENV['LOGSENSE_HOST']}"
+    port "#{ENV['LOGSENSE_PORT']}"
   </server>
 </match>
