Revert/Fix breaking changes (#1)
* Fix typos in fluentd config

Ruby interpolation requires double quoted strings.

--- a/logsense.conf
+++ b/logsense.conf
@@ -5,7 +5,7 @@
 <filter **>
   @type record_transformer
   <record>
-    logsense_token #{ENV['LOGSENSE_TOKEN']}
+    logsense_token "#{ENV['LOGSENSE_TOKEN']}"
   </record>
 </filter>
 
@@ -17,7 +17,7 @@
   transport tls
   tls_verify_hostname true
   <server>
-    host #{ENV['LOGSENSE_HOST']}
-    port #{ENV['LOGSENSE_PORT']}
+    host "#{ENV['LOGSENSE_HOST']}"
+    port "#{ENV['LOGSENSE_PORT']}"
   </server>
 </match>
